--- a/personal.css
+++ b/personal.css
@@ -1,186 +1,460 @@
-::-webkit-scrollbar {
-  width: 0;
+* {
+  margin: 0;
 }
-
 body {
-  background-image: linear-gradient(62deg, #3a3d40 0%, #181719 100%);
-  height: 87em;
+  background-color: grey;
+  overflow-x: hidden;
 }
 
 header {
-  background-color: #212f3c;
   width: 100%;
-  height: 5.5em;
-  position: absolute;
-  top: 0;
-  left: 0;
+  height: 4em;
+  background-color: rgba(40,40,40,0.95);
+  border-bottom: 1px solid #1a1a1a;
+  position: fixed;
+  z-index: 1;
+  backdrop-filter: blur(5px);
+  border-bottom: 1px solid #1a1a1a;
 }
 
-#nav-bar {
-  overflow-x: auto;
+#header-links {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.05fr;
   grid-column-gap: 1.5em;
+  list-style: none;
   position: absolute;
-  width: 98%;
-  left: 1%;
-  bottom: -10%;
-  text-align: center;
+  right: -5%;
+  top: 0.75em;
 }
 
-#nav-bar > p > a {
-  color: silver;
+#header-links > a > li:hover {
+  color: red;
+  cursor: pointer;
+}
+
+#header-links > a {
   text-decoration: none;
-  font-size: 24px;
-  padding: 10px;
 }
 
-#nav-bar > p > a:hover {
-  color: orange;
+#header-links > a > li {
+  font-size: 2em;
+  color: white;
 }
 
-#name {
-  font-size: 100px;
-  font-family: "lucida handwriting", cursive;
-  color: silver;
-  display: flex;
-  justify-content: center;
-  position: absolute;
-  width: 98%;
+#intro-wrap {
+  background-color: #1a1a1a;
+  width: 100%;
+  height: 100%;
+}
+
+#hello {
+  font-size: 48px;
+  color: white;
   text-align: center;
-  left: 1%;
-  top: 0.5em;
+  position: relative;
+  top: 25%;
+  animation: fade-up 1s;
+  
 }
 
-#mission {
-  color: silver;
-  width: 80%;
-  height: 3em;
-  position: absolute;
-  left: 10%;
-  top: 24em;
+#intro {
+  font-size: 48px;
+  color: white;
   text-align: center;
-  line-height: 1em;
+  position: relative;
+  top: 30%;
+  animation: fade-down 1s;
 }
 
-h2 {
+@keyframes fade-up {
+  0% {
+      top: 110%;
+}
+}
+
+@keyframes fade-down {
+  0% {
+      top: -10%;
+}
+}
+
+#about {
   text-decoration: underline;
+  text-align: center;
+  font-size: 48px;
+  position: relative;
+  top: 15%;
+}
+
+#description {
+  position: absolute;
+  left: 5%;
+  width: 40%;
+  top: 140%;
+  font-size: 22px;
+}
+
+#skills > h2 {
+  text-decoration: underline;
+  margin-bottom: 0.4em;
 }
 
 #skills {
   position: absolute;
-  top: 34em;
-}
-
-#certifications {
-  position: absolute;
-  top: 50em;
-}
-
-#certifications > li > a {
-  text-decoration: none;
+  left: 70%;
+  top: 135%;
+  font-size: 22px;
 }
 
 #portfolio {
-  overflow-x: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 0.05fr;
-  grid-column-gap: 1.5em;
-  position: absolute;
-  width: 98%;
-  left: 1%;
-  top: 67em;
+  text-decoration: underline;
   text-align: center;
-}
-
-#spacer {
-  visibility: hidden;
-}
-
-#portfolio > a {
-  text-decoration: none;
-  height: 17em;
-}
-
-#portfolio > a > img {
-  width: 20em;
-  height: 15em;
-  border: 1px solid black;
-}
-
-#portfolio > a > p {
-  color: black;
-  font-size: 24px;
-  background-color: blue;
+  font-size: 48px;
   position: relative;
-  top: -1.2em;
-  border: 1px solid;
+  top: 95%;
+}
+
+#project-1 {
+  position: absolute;
+  top: 235%;
+  right: 5%;
+  width: 40%;
+}
+
+#project-1 > h2 {
+  font-size: 28px;
+}
+
+#project-1 > p {
+  font-size: 20px;
+}
+
+#img-1 {
+  position: absolute;
+  left: 3%;
+  top: 225%;
+}
+
+#project-2 {
+  position: absolute;
+  top: 325%;
+  left: 5%;
+  width: 40%;
+}
+
+#project-2 > h2 {
+  font-size: 28px;
+}
+
+#project-2 > p {
+  font-size: 20px;
+}
+
+#img-2 {
+  position: absolute;
+  right: 3%;
+  top: 310%;
+}
+
+#project-3 {
+  position: absolute;
+  top: 405%;
+  right: 5%;
+  width: 40%;
+}
+
+#project-3 > h2 {
+  font-size: 28px;
+}
+
+#project-3 > p {
+  font-size: 20px;
+}
+
+#img-3 {
+  position: absolute;
+  left: 3%;
+  top: 395%;
+}
+
+#project-4 {
+  position: absolute;
+  top: 495%;
+  left: 5%;
+  width: 40%;
+}
+
+#project-4 > h2 {
+  font-size: 28px;
+}
+
+#project-4 > p {
+  font-size: 20px;
+}
+
+#img-4 {
+  position: absolute;
+  right: 3%;
+  top: 480%;
+}
+
+#project-5 {
+  position: absolute;
+  top: 570%;
+  right: 5%;
+  width: 40%;
+}
+
+#project-5 > h2 {
+  font-size: 28px;
+}
+
+#project-5 > p {
+  font-size: 20px;
+}
+
+#img-5 {
+  position: absolute;
+  left: 3%;
+  top: 565%;
 }
 
 footer {
   background-color: #212f3c;
-  position: absolute;
-  top: 88em;
-  left: 0;
-  width: 100vw;
-  height: 8.5em;
+  width: 100%;
+  height: 5.6em;
+  position: relative;
+  top: 545%;
 }
 
-#to-top > a {
-  text-decoration: none;
+#to-top {
   color: orange;
   position: absolute;
   left: 0.5em;
   top: 0.5em;
 }
 
-#contact {
+#linked-link {
   position: absolute;
   left: 0.5em;
-  top: 1.48em;
-  font-weight: bold;
+  top: 2em;
 }
 
-#contact > a {
-  font-size: 20px;
-}
-
-#codepen-p {
+#code-hub {
   position: absolute;
   left: 0.5em;
-  top: 3.5em;
-  display: block;
+  top: 3.4em;
 }
 
-@media all and (min-width: 800px) {
-  footer {
-    height: 7em;
+.project-image {
+  width: 45vw;
+  aspect-ratio: 1.3/1;
+}
+
+#light-wrap {
+  width: 100vw;
+  height: 100vh;
+  background-size: 100% 100%;
+  z-index: 100;
+}
+
+#light {
+  position: relative;
+  width: 0.4vw;
+  aspect-ratio: 1/1;
+  background-color: white;
+  border-radius: 15px;
+  opacity: 1;
+  animation: flash 11s infinite, drift 11s infinite;
+  z-index: 100;
+}
+
+@keyframes flash {
+  0% {
+          opacity: 0;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+        25% {
+          opacity: 1;
+          box-shadow: 0 0 0.8vw 0.8vw yellow;
+        }
+  45% {
+    opacity: 0;
   }
-  #skills {
-    top: 35em;
-    left: 8em;
+        100% {
+          opacity: 0;
+                    box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+}
+
+@keyframes drift {
+  0%  {
+    left: 5vw;
+    top: 90%;
   }
-  #skills > h2 {
-    font-size: 30px;
+  50% {
+    left: 25vw;
+    top: 50%;
   }
-  #skills > li {
-    font-size: 20px;
-  }
-  #certifications {
-    top: 35em;
-    right: 8em;
-  }
-  #certifications > h2 {
-    font-size: 30px;
-  }
-  #certifications > li {
-    font-size: 20px;
+  100% {
+    left: 90vw;
+    top: 10%;
   }
 }
 
-@media all and (max-width: 750px) {
-  #name {
-    font-size: 55px;
-    top: 3em;
+#light2 {
+  position: relative;
+  width: 0.4vw;
+  aspect-ratio: 1/1;
+  background-color: white;
+  border-radius: 15px;
+  opacity: 1;
+  animation: flash2 13s infinite, drift2 13s infinite;
+  z-index: 100;
+}
+
+@keyframes flash2 {
+  0% {
+    opacity: 0;
+  }
+  30% {
+          opacity: 1;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+  50% {
+    opacity: 0;
+  }
+  84% {
+    opacity: 0;
+  }
+  85% {
+    opacity: 1;
+  }
+        100% {
+          opacity: 0;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+}
+
+@keyframes drift2 {
+  0%  {
+    left: 70vw;
+    top: 70%;
+  }
+  50% {
+    left: 60vw;
+    top: 50%;
+  }
+  80% {
+    left: 75vw;
+    top: 20%;
+  }
+  100% {
+    left: 80vw;
+    top: 10%;
+  }
+}
+
+#light3 {
+  position: relative;
+  width: 0.4vw;
+  aspect-ratio: 1/1;
+  background-color: white;
+  border-radius: 15px;
+  opacity: 1;
+  animation: flash3 15s infinite, drift3 15s infinite;
+}
+
+@keyframes flash3 {
+  30% {
+          opacity: 1;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+        100% {
+          opacity: 0;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+}
+
+@keyframes drift3 {
+  0% {
+    opacity: 0%;
+  }
+  29% {
+    opacity: 0;
+  }
+  30%  {
+    opacity: 1;
+    left: 30vw;
+    top: 30%;
+  }
+  60% {
+    opacity: 0;
+    left: 10vw;
+    top: 35%;
+  }
+  79% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+    left: 15vw;
+    top: 20%;
+  }
+  100% {
+    left: 15vw;
+    top: 0%;
+  }
+}
+
+#light4 {
+  position: relative;
+  width: 0.4vw;
+  aspect-ratio: 1/1;
+  background-color: white;
+  border-radius: 15px;
+  opacity: 1;
+  animation: flash4 10s infinite, drift4 10s infinite;
+}
+
+@keyframes flash4 {
+  30% {
+          opacity: 1;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+        100% {
+          opacity: 0;
+          box-shadow: 0 0 0.5vw 0.5vw yellow;
+        }
+}
+
+@keyframes drift4 {
+  0% {
+    opacity: 0%;
+  }
+  29% {
+    opacity: 0;
+  }
+  30%  {
+    opacity: 1;
+    left: 51vw;
+    top: 70%;
+  }
+  60% {
+    opacity: 0;
+    left: 55vw;
+    top: 35%;
+  }
+  79% {
+    opacity: 0;
+  }
+  80% {
+    opacity: 1;
+    left: 15vw;
+    top: 20%;
+  }
+  100% {
+    left: 15vw;
+    top: 0%;
   }
 }
