--- a/personal.css
+++ b/personal.css
@@ -1,9 +1,10 @@
 * {
   margin: 0;
 }
+
 body {
-  background-color: blue;
   overflow-x: hidden;
+  background-color: grey;
 }
 
 header {
@@ -43,7 +44,7 @@ header {
 
 #intro-wrap {
   background-color: #1a1a1a;
-  width: 100%;
+  width: 100vw;
   height: 100%;
 }
 
@@ -591,10 +592,6 @@ footer {
 
 footer {
   top: 710%;
-}
-
-body {
-  background-color: green;
 }
 }
 
