--- a/personal.css
+++ b/personal.css
@@ -46,7 +46,8 @@ header {
   background-color: #1a1a1a;
   width: 100vw;
   height: 100%;
-  position: absolute;
+  position: relative;
+  left: 5em;
 }
 
 #hello {
