--- a/personal.css
+++ b/personal.css
@@ -46,8 +46,7 @@ header {
 #intro-wrap {
   background-color: #1a1a1a;
   width: 100vw;
-  height: 100%;
-  overflow-x: hidden;
+  height: 100vh;
 }
 
 #hello {
