--- a/personal.css
+++ b/personal.css
@@ -26,7 +26,7 @@ header {
   list-style: none;
   position: absolute;
   right: -5%;
-  top: 0.75em;
+  top: 0.8em;
 }
 
 #header-links > a > li:hover {
@@ -719,10 +719,18 @@ footer {
   }
 
   #project-2 {
-    top: 450%;
+    top: 455%;
   }
 
   #img-2 {
-    top: 460%;
+    top: 465%;
+  }
+
+  #project-3 {
+    top: 660%;
+  }
+
+  #img-3 {
+    top: 670%;
   }
 }
