--- a/personal.css
+++ b/personal.css
@@ -697,7 +697,7 @@ footer {
 
 @media all and (max-width: 380px) {
  #header-links {
-   top: 0.9em;
+   top: 0.95em;
 }
 
   #about {
@@ -715,7 +715,7 @@ footer {
   }
 
   #header-links {
-    grid-column-gap: 0.8em;
+    grid-column-gap: 0.75em;
   }
 
   #header-links > a > li {
@@ -756,6 +756,10 @@ footer {
 
   footer {
     top: 1270%;
-    height: 8em;
+    height: 8.3em;
+  }
+
+  #code-hub {
+    top: 3.9em;
   }
 }
