--- a/personal.css
+++ b/personal.css
@@ -3,9 +3,20 @@
 }
 
 body {
-  background-color: grey;
   overflow-x: hidden;
   max-width: 100vw;
+}
+
+body > p {
+  font-family: "Helvetica";
+}
+
+body > div > p {
+  font-family: "Helvetica";
+}
+
+#skills > li {
+  font-family: "Helvetica";
 }
 
 header {
