--- a/personal.css
+++ b/personal.css
@@ -233,12 +233,33 @@ header {
   top: 565%;
 }
 
+#project-6 {
+  position: absolute;
+  top: 660%;
+  left: 5%;
+  width: 40%;
+}
+
+#project-6 > h2 {
+  font-size: 28px;
+}
+
+#project-6 > p {
+  font-size: 20px;
+}
+
+#img-6 {
+  position: absolute;
+  right: 3%;
+  top: 660%;
+}
+
 footer {
   background-color: #212f3c;
   width: 100vw;
   height: 5.6em;
-  position: relative;
-  top: 550%;
+  position: absolute;
+  top: 755%;
 }
 
 #to-top {
@@ -472,9 +493,37 @@ footer {
   }
 }
 
-@media all and (max-width: 1200px) {
+@media all and (max-width: 1400px) {
 footer {
-  top: 580%;
+  top: 750%;
+}
+}
+
+@media all and (max-width: 1300px) {
+#project-6 {
+  top: 670%;
+}
+
+#img-6 {
+  top: 670%;
+}
+
+footer {
+  top: 770%;
+}
+}
+
+@media all and (max-width: 1050px) {
+#project-6 {
+  top: 690%;
+}
+
+#img-6 {
+  top: 690%;
+}
+
+footer {
+  top: 810%;
 }
 }
 
@@ -522,14 +571,112 @@ top: 420%;
   top: 610%;
 }
 
+#project-6 {
+  top: 740%;
+}
+
+#img-6 {
+  top: 740%;
+}
+
 footer {
-  top: 630%;
+  top: 900%;
 }
 }
 
 @media all and (max-width: 800px) {
-  footer {
-    top: 645%;
+#project-6 {
+  top: 760%;
+}
+
+#img-6 {
+  top: 760%;
+}
+
+footer {
+  top: 920%;
+}
+}
+
+@media all and (max-width: 750px) {
+#header-links {
+  right: -5%;
+}
+
+#portfolio {
+  top: 125%;
+}
+
+#project-1 {
+  top: 265%;
+  width: 45%;
+  right: 2%;
+}
+
+#img-1 {
+  top: 265%;
+  width: 45%;
+  left: 2%;
+}
+
+#project-2 {
+  top: 345%;
+  width: 45%;
+  left: 2%;
+}
+
+#img-2 {
+  top: 355%;
+  width: 45%;
+  right: 2%;
+}
+
+#project-3 {
+  top: 445%;
+  width: 45%;
+  right: 2%;
+}
+
+#img-3 {
+  top: 455%;
+  width: 45%;
+  left: 2%;
+}
+
+#project-4 {
+  top: 560%;
+  width: 45%;
+  left: 2%;
+}
+
+#img-4 {
+  top: 575%;
+  width: 45%;
+  right: 2%;
+}
+
+#project-5 {
+  top: 650%;
+  width: 45%;
+  right: 2%;
+}
+
+#img-5 {
+  top: 660%;
+  width: 45%;
+  left: 2%;
+}
+
+#project-6 {
+  top: 700%;
+}
+
+#img-6 {
+  top: 700%;
+}
+
+footer {
+  top: 880%;
 }
 }
 
@@ -602,14 +749,36 @@ footer {
   left: 2%;
 }
 
+#project-6 {
+  top: 790%;
+}
+
+#img-6 {
+  top: 790%;
+}
+
 footer {
-  top: 710%;
+  top: 960%;
+}
+}
+
+@media all and (max-width: 700px) {
+  #project-6 {
+  top: 810%;
+}
+
+#img-6 {
+  top: 810%;
+}
+
+footer {
+  top: 990%;
 }
 }
 
 @media all and (max-width: 650px) {
-  #portfolio {
-    top: 155%;
+#portfolio {
+  top: 155%;
 }
 
 #project-1 {
@@ -652,8 +821,26 @@ top: 310%;
   top: 750%;
 }
 
+#project-6 {
+  top: 900%;
+}
+
+#img-6 {
+  top: 900%;
+}
+
 footer {
-  top: 800%;
+  top: 1100%;
+}
+}
+
+@media all and (max-width: 600px) {
+#project-6 {
+  top: 925%;
+}
+
+#img-6 {
+  top: 925%;
 }
 }
 
@@ -702,8 +889,24 @@ footer {
   top: 860%;
 }
 
+#project-5 {
+  top: 900%;
+}
+
+#img-5 {
+  top: 910%;
+}
+
+#project-6 {
+  top: 1110%;
+}
+
+#img-6 {
+  top: 1110%;
+}
+
 footer {
-  top: 955%;
+  top: 1350%;
 }
 }
 
@@ -766,8 +969,16 @@ footer {
     top: 1065%;
   }
 
+  #project-6 {
+    top: 1100%;
+  }
+
+  #img-6 {
+    top: 1120%;
+  }
+
   footer {
-    top: 1270%;
+    top: 1300%;
     height: 8.3em;
   }
 
